Snapshot of incorrect logic for Puzzle 19.